--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,9 @@ dependencies {
     //cancellarlo e scommentare quello sopra
     implementation 'androidx.cardview:cardview:1.0.0-alpha3'
 
+    // implements per libreria glide
+    implementation ('com.github.bumptech.glide:glide:4.12.0')
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 
 }
