--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,11 @@ android {
 
 dependencies {
 
+    def room_version = "2.3.0"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -37,12 +42,14 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+
     //implementation 'com.android.support:cardview-v7:28.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
-   // aggiunto questo se non funzionano cose provare a
+
+    //aggiunto questo se non funzionano cose provare a
     //cancellarlo e scommentare quello sopra
     implementation 'androidx.cardview:cardview:1.0.0-alpha3'
 
