--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,11 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
+
+    // retrofit
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    // converter
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 }
