--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0-alpha3'
 
     // implements per libreria glide
-    implementation ('com.github.bumptech.glide:glide:4.12.0')
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     // room dependency
