--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,17 @@ android {
 
 dependencies {
 
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    //implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+
+   // implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+
+    implementation 'com.google.android.material:material:1.4.0'
+
+    //implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
@@ -44,11 +51,14 @@ dependencies {
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
    // aggiunto questo se non funzionano cose provare a
     //cancellarlo e scommentare quello sopra
-    implementation 'androidx.cardview:cardview:1.0.0-alpha3'
+
+    //implementation 'androidx.cardview:cardview:1.0.0-alpha3'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     // implements per libreria glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation'com.android.support:multidex:1.0.3'
 
     // room dependency
     def room_version = "2.3.0"
