--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
     }
 }
 
+// Firebase plugins
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
 dependencies {
 
     def room_version = "2.3.0"
@@ -57,5 +61,18 @@ dependencies {
     implementation ('com.github.bumptech.glide:glide:4.12.0')
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:29.0.2')
+
+    // Add the dependency for the Firebase SDK for Google Analytics
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+
+    // Declare the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth'
+
+    // Add the dependencies for any other desired Firebase products
+    // https://firebase.google.com/docs/android/setup#available-libraries
 
 }
