almost almost done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,9 +65,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'com.google.firebase:firebase-database:20.0.3'
 
-    def room_version = "2.3.0"
-
-
 
     implementation 'com.google.android.material:material:1.4.0'
 
@@ -100,6 +97,9 @@ dependencies {
 
 
     // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
 
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:29.0.2')
