--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="it.unimib.cookery">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
         <activity
-            android:name=".ui.login_register_user"
+            android:name=".ui.UserProfile"
+            android:exported="false" />
+        <activity
+            android:name=".ui.LoginRegisterUser"
             android:exported="false" />
         <activity
             android:name=".ui.RegisterUser"
