--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:noHistory="true"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.MakeRecipe"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
