--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,11 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.LoginRegisterUser"
+            android:name=".firebase.LoginRegisterUser"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.RegisterUser"
+            android:name=".firebase.RegisterUser"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
