--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,6 @@ apply plugin: 'com.google.gms.google-services'
 dependencies {
 
 
-
-
     // implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.4.0'
 
@@ -63,7 +61,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'com.google.firebase:firebase-database:20.0.3'
-
     
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -78,7 +75,7 @@ dependencies {
     //aggiunto questo se non funzionano cose provare a
     //cancellarlo e scommentare quello sopra
 
-
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     // implements per libreria glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
